tests/checker/diagnostics/0207_adt_record_update_int_field_08.ml.infer.expected
File "0207_adt_record_update_int_field_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0207_adt_record_update_int_field_08 is not a valid module name.

File "0207_adt_record_update_int_field_08.ml", line 3, characters 34-38:
3 | let _ = { base_theta with score = true }
                                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
